fixed layout bugs

--- a/src/styles/pages/LibertyToggler.sass
+++ b/src/styles/pages/LibertyToggler.sass
@@ -4,12 +4,15 @@
     align-items: center
     box-sizing: border-box
     height: fit-content
-    margin-top: 200px
     border: 1px solid transparent
     border-radius: 30px
     backdrop-filter: blur(10px)
     background-color: rgba(255, 255, 255, 0.349)
     padding: 5rem 3rem
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
 
     h2
         font-size: 2.5rem
