--- a/src/styles/pages/Loader.sass
+++ b/src/styles/pages/Loader.sass
@@ -6,8 +6,6 @@
   border: 2px solid
   position: absolute
   top: 50% 
-  left: 50%
-  tramsform: translate(-50%, -50%)
 
   &::before
     content: ""
